# gator

./: pyproject.toml
example/: example.ipynb  training_generator.ipynb
example/GATOR/Thumbnails/CD3D/NegToPos/: 11.tif  12.tif  23.tif  38.tif  49.tif
example/GATOR/Thumbnails/CD3D/PosToNeg/: 11.tif  31.tif  42.tif
example/GATOR/Thumbnails/CD3D/TrueNeg/: 0.tif  10.tif  16.tif  17.tif  2.tif  21.tif  22.tif  24.tif  25.tif  3.tif  31.tif  32.tif  33.tif  34.tif  35.tif  7.tif  8.tif
example/GATOR/Thumbnails/CD3D/TruePos/: 1.tif  14.tif  15.tif  16.tif  17.tif  18.tif  19.tif  21.tif  22.tif  27.tif  3.tif  34.tif  35.tif  36.tif  37.tif  38.tif  39.tif  41.tif  44.tif  5.tif  6.tif  8.tif
example/GATOR/Thumbnails/CD4/NegToPos/: 13.tif  16.tif  25.tif  41.tif  48.tif
example/GATOR/Thumbnails/CD4/PosToNeg/: 11.tif  2.tif  24.tif  37.tif  45.tif
example/GATOR/Thumbnails/CD4/TrueNeg/: 1.tif  11.tif  12.tif  15.tif  18.tif  2.tif  22.tif  23.tif  26.tif  28.tif  3.tif  32.tif  33.tif  34.tif  36.tif  37.tif  40.tif  44.tif  45.tif  46.tif  47.tif  5.tif  8.tif  9.tif
example/GATOR/Thumbnails/CD4/TruePos/: 18.tif  19.tif  28.tif  3.tif  30.tif  34.tif  48.tif  5.tif  8.tif
example/GATOR/Thumbnails/CD45/TrueNeg/: 0.tif  1.tif  10.tif  11.tif  12.tif  13.tif  14.tif  15.tif  16.tif  17.tif  18.tif  19.tif  2.tif  20.tif  21.tif  22.tif  23.tif  24.tif  25.tif  26.tif  27.tif  28.tif  29.tif  3.tif  30.tif  31.tif  32.tif  33.tif  34.tif  35.tif  36.tif  (+19 more)
gator/: __init__.py  cloneFolder.py  gatorObject.py  generateThumbnails.py  generateTraining.py  probQuant.py
(+1306 files in other folders)
