[tool.poetry]
name = "gator"
version = "0.1.0"
description = ""
authors = ["Ajit Johnson Nirmal <ajitjohnson.n@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.2"
pandas = "^1.4.4"
tifffile = "^2022.8.12"
pathlib = "^1.0.1"
dask = "^2022.8.1"
zarr = "^2.12.0"
opencv-python = "^4.6.0.66"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

